--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -612,7 +612,7 @@ ul.slick-dots {
 
 .fun-facts {
 	margin-top: 140px;
-	background-image: url(../images/about-fullscreen-image-1-1920x600.jpg);
+	background-image: url(../images/63AMG.jpeg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
