Change Merc Picture
Changed the ugly mercedes pic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,7 +409,7 @@ header .navbar {
 }
 
 .Modern-Slider .item-3 .img-fill {
-	background-image: url(../images/Merc.jpeg);
+	background-image: url(../images/about-fullscreen-image-1-1920x600.jpg);
 }
 
 .Modern-Slider .NextArrow{
