Change mercedes replacement pic to R8
Just changed the updated Mercedes picture to a rolling shot of R8

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,7 +409,7 @@ header .navbar {
 }
 
 .Modern-Slider .item-3 .img-fill {
-	background-image: url(../images/about-fullscreen-image-1-1920x600.jpg);
+	background-image: url(../images/R8Photo.jpg);
 }
 
 .Modern-Slider .NextArrow{
