updates to  service

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1632,3 +1632,10 @@ iframe {
   width: 100%;
   height: auto;
 }
+.service p{
+	font-size: 4vh;
+	color: white;
+	display: flex;
+    justify-content: center;
+    text-align: center;
+}
