--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1204,11 +1204,25 @@ footer .contact-form button.filled-button:hover {
   color: #fff;
   position: relative;
 }
+.page-heading1 {
+	text-align: center;
+	background-image: url(../images/AMGGT.jpeg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 230px 0px 150px 0px;
+	color: #fff;
+	position: relative;
+  }
 
 .page-heading .container {
   position: relative;
   z-index: 2;
 }
+.page-heading1 .container {
+	position: relative;
+	z-index: 2;
+  }
 
 .page-heading:before {
   content: "";
@@ -1220,7 +1234,16 @@ footer .contact-form button.filled-button:hover {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
-
+.page-heading1:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 1;
+  }
 .page-heading h1 {
   text-transform: capitalize;
   font-size: 36px;
@@ -1228,6 +1251,13 @@ footer .contact-form button.filled-button:hover {
   letter-spacing: 2px;
   margin-bottom: 18px;
 }
+.page-heading1 h1 {
+	text-transform: capitalize;
+	font-size: 36px;
+	font-weight: 700;
+	letter-spacing: 2px;
+	margin-bottom: 18px;
+  }
 
 .page-heading span {
   font-size: 15px;
@@ -1236,7 +1266,13 @@ footer .contact-form button.filled-button:hover {
   color: #fff;
   display: block;
 }
-
+.page-heading1 span {
+	font-size: 15px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	color: #fff;
+	display: block;
+  }
 /* team */
 
 .team {
