--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1682,6 +1682,8 @@ a.navbar-brand img {
 @media screen and (max-width: 920px){
 	.service-row {
 		flex-direction: column;
+		margin-left: 10%;
+		margin-right: 10%;
 	}
   .service-image{
     display: flex;
