--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1406,8 +1406,8 @@ footer .contact-form button.filled-button:hover {
 
 .tabs-content-1 img {
   width: 100%;
-  height:auto
-  overflow: hidden;
+  height:auto;
+  overflow:hidden;
 }
 
 .tabs-content-1 h4 {
